Release notes by PHOCOA version number.

Legend:
[bugfix] - Bug fix.
[new] - New feature.
[BC-break] - Backwards-compatibility may be broken. Update your code to "the new way" as noted.
[BC-deprecated] - Backwards-compatibility mode supported, but deprecated. Update your code to "the new way" as noted.

Version 0.2.8 - ??

Version 0.2.7 - ??
- [new] Add loading indicator to WFYAHOO_widget_TreeViewNode
- [new] Add "no matches" indicator to WFYAHOO_widget_TreeViewNode + WFSearchField
- [new] Refactor WFErrorsException to simply wrap new class WFErrorArray which is an optional drop-in replacement for the $errors param in validateXXX() calls.
        WFErrorArray is a perfect wrapper for the errors returned by the validation engine, whether via validate<Key> or validateObject.
        WFErrorArray makes it very easy to test for certain error codes and/or enumerate all errors in the error list generated by Key-Value Validation.
- [new] Refactor WFArray, now with more KVC goodness!
- [bugfix] Phocoa's onEvent handlers now correctly work for radio/checkbox inputs on IE.
- [BC-break] If you are ever checking to see if a validator was invalid by doing empty($errors) that is likely to break now that we often have WFErrorArray.
             Fortunately apps should never do this since they are getting back a boolean as to validity. Just putting this warning here for completeness.

Version 0.2.6 - 7/7/2009
- [new] Add YUILoader support for "combine" and "comboBase".
- [bugfix] WFSubmit's duplicateSubmitMessage feature now works again. It was broken when WFSubmit started using WFAction.
  NOTE: WFAction now allows you to cancel ServerAction and AjaxAction by implementing a PHOCOA.widgets['<widgetId>'].events['<event>'].handleEvent function and returning false to cancel the RPC.
- [bugfix] Fix nullPlaceholder behavior on IE. Bug would cause the text "null" to appear in WFSearchField instead of "" on focus.