@@ -7,6 +7,7 @@ Legend:
 [BC-deprecated] - Backwards-compatibility mode supported, but deprecated. Update your code to "the new way" as noted.
 
 Version 0.2.8 - ??
+- [bugfix] Fix bug with KVC magic array operators not working on WFArray instances.
 
 Version 0.2.7 - ??
 - [new] Add loading indicator to WFYAHOO_widget_TreeViewNode
